[gd_scene load_steps=7 format=3 uid="uid://dtcl56kq2beg1"]

[ext_resource type="Script" uid="uid://bhfh6y3xrnlny" path="res://scripts/nav_bar.gd" id="1_fxa0t"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="2_k4aqs"]
[ext_resource type="Texture2D" uid="uid://ch054u7158xvr" path="res://icons/problem-w.svg" id="3_bd6jp"]
[ext_resource type="Texture2D" uid="uid://yevly2iiws0p" path="res://icons/wall-w.svg" id="4_k4aqs"]
[ext_resource type="Texture2D" uid="uid://cpf8xwe1bpwhn" path="res://icons/config-w.svg" id="5_43p7e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6mvx"]
bg_color = Color(0.14902, 0.137255, 0.219608, 1)

[node name="NavBar" type="MarginContainer"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_fxa0t")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e6mvx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="ButtonProblems" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_k4aqs")
theme_override_font_sizes/font_size = 30
text = "Problems"
icon = ExtResource("3_bd6jp")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ButtonWalls" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Walls"
icon = ExtResource("4_k4aqs")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ButtonConfig" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Config"
icon = ExtResource("5_43p7e")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[connection signal="pressed" from="HBoxContainer/ButtonProblems" to="." method="_on_button_problems_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonWalls" to="." method="_on_button_walls_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonConfig" to="." method="_on_button_config_pressed"]
